seaqt/QtWebKit/gen_qwebsettings.nim

import ./Qt5WebKit_libs

{.push raises: [].}

from system/ansi_c import c_free

type
  struct_miqt_string {.used.} = object
    len: csize_t
    data: cstring

  struct_miqt_array {.used.} = object
    len: csize_t
    data: pointer

  struct_miqt_map {.used.} = object
    len: csize_t
    keys: pointer
    values: pointer

  miqt_uintptr_t {.importc: "uintptr_t", header: "stdint.h", used.} = uint
  miqt_intptr_t {.importc: "intptr_t", header: "stdint.h", used.} = int

func fromBytes(T: type string, v: openArray[byte]): string {.used.} =
  if v.len > 0:
    result = newString(v.len)
    when nimvm:
      for i, c in v:
        result[i] = cast[char](c)
    else:
      copyMem(addr result[0], unsafeAddr v[0], v.len)

const cflags = gorge("pkg-config --cflags Qt5WebKit")  & " -fPIC"
{.compile("gen_qwebsettings.cpp", cflags).}


type QWebSettingsFontFamilyEnum* = distinct cint
template StandardFont*(_: type QWebSettingsFontFamilyEnum): untyped = 0
template FixedFont*(_: type QWebSettingsFontFamilyEnum): untyped = 1
template SerifFont*(_: type QWebSettingsFontFamilyEnum): untyped = 2
template SansSerifFont*(_: type QWebSettingsFontFamilyEnum): untyped = 3
template CursiveFont*(_: type QWebSettingsFontFamilyEnum): untyped = 4
template FantasyFont*(_: type QWebSettingsFontFamilyEnum): untyped = 5


type QWebSettingsWebAttributeEnum* = distinct cint
template AutoLoadImages*(_: type QWebSettingsWebAttributeEnum): untyped = 0
template JavascriptEnabled*(_: type QWebSettingsWebAttributeEnum): untyped = 1
template JavaEnabled*(_: type QWebSettingsWebAttributeEnum): untyped = 2
template PluginsEnabled*(_: type QWebSettingsWebAttributeEnum): untyped = 3
template PrivateBrowsingEnabled*(_: type QWebSettingsWebAttributeEnum): untyped = 4
template JavascriptCanOpenWindows*(_: type QWebSettingsWebAttributeEnum): untyped = 5
template JavascriptCanAccessClipboard*(_: type QWebSettingsWebAttributeEnum): untyped = 6
template DeveloperExtrasEnabled*(_: type QWebSettingsWebAttributeEnum): untyped = 7
template LinksIncludedInFocusChain*(_: type QWebSettingsWebAttributeEnum): untyped = 8
template ZoomTextOnly*(_: type QWebSettingsWebAttributeEnum): untyped = 9
template PrintElementBackgrounds*(_: type QWebSettingsWebAttributeEnum): untyped = 10
template OfflineStorageDatabaseEnabled*(_: type QWebSettingsWebAttributeEnum): untyped = 11
template OfflineWebApplicationCacheEnabled*(_: type QWebSettingsWebAttributeEnum): untyped = 12
template LocalStorageEnabled*(_: type QWebSettingsWebAttributeEnum): untyped = 13
template LocalStorageDatabaseEnabled*(_: type QWebSettingsWebAttributeEnum): untyped = 13
template LocalContentCanAccessRemoteUrls*(_: type QWebSettingsWebAttributeEnum): untyped = 14
template DnsPrefetchEnabled*(_: type QWebSettingsWebAttributeEnum): untyped = 15
template XSSAuditingEnabled*(_: type QWebSettingsWebAttributeEnum): untyped = 16
template AcceleratedCompositingEnabled*(_: type QWebSettingsWebAttributeEnum): untyped = 17
template SpatialNavigationEnabled*(_: type QWebSettingsWebAttributeEnum): untyped = 18
template LocalContentCanAccessFileUrls*(_: type QWebSettingsWebAttributeEnum): untyped = 19
template TiledBackingStoreEnabled*(_: type QWebSettingsWebAttributeEnum): untyped = 20
template FrameFlatteningEnabled*(_: type QWebSettingsWebAttributeEnum): untyped = 21
template SiteSpecificQuirksEnabled*(_: type QWebSettingsWebAttributeEnum): untyped = 22
template JavascriptCanCloseWindows*(_: type QWebSettingsWebAttributeEnum): untyped = 23
template WebGLEnabled*(_: type QWebSettingsWebAttributeEnum): untyped = 24
template CSSRegionsEnabled*(_: type QWebSettingsWebAttributeEnum): untyped = 25
template HyperlinkAuditingEnabled*(_: type QWebSettingsWebAttributeEnum): untyped = 26
template CSSGridLayoutEnabled*(_: type QWebSettingsWebAttributeEnum): untyped = 27
template ScrollAnimatorEnabled*(_: type QWebSettingsWebAttributeEnum): untyped = 28
template CaretBrowsingEnabled*(_: type QWebSettingsWebAttributeEnum): untyped = 29
template NotificationsEnabled*(_: type QWebSettingsWebAttributeEnum): untyped = 30
template WebAudioEnabled*(_: type QWebSettingsWebAttributeEnum): untyped = 31
template Accelerated2dCanvasEnabled*(_: type QWebSettingsWebAttributeEnum): untyped = 32
template MediaSourceEnabled*(_: type QWebSettingsWebAttributeEnum): untyped = 33
template MediaEnabled*(_: type QWebSettingsWebAttributeEnum): untyped = 34
template WebSecurityEnabled*(_: type QWebSettingsWebAttributeEnum): untyped = 35
template FullScreenSupportEnabled*(_: type QWebSettingsWebAttributeEnum): untyped = 36
template ImagesEnabled*(_: type QWebSettingsWebAttributeEnum): untyped = 37
template AllowRunningInsecureContent*(_: type QWebSettingsWebAttributeEnum): untyped = 38
template ErrorPageEnabled*(_: type QWebSettingsWebAttributeEnum): untyped = 39


type QWebSettingsWebGraphicEnum* = distinct cint
template MissingImageGraphic*(_: type QWebSettingsWebGraphicEnum): untyped = 0
template MissingPluginGraphic*(_: type QWebSettingsWebGraphicEnum): untyped = 1
template DefaultFrameIconGraphic*(_: type QWebSettingsWebGraphicEnum): untyped = 2
template TextAreaSizeGripCornerGraphic*(_: type QWebSettingsWebGraphicEnum): untyped = 3
template DeleteButtonGraphic*(_: type QWebSettingsWebGraphicEnum): untyped = 4
template InputSpeechButtonGraphic*(_: type QWebSettingsWebGraphicEnum): untyped = 5
template SearchCancelButtonGraphic*(_: type QWebSettingsWebGraphicEnum): untyped = 6
template SearchCancelButtonPressedGraphic*(_: type QWebSettingsWebGraphicEnum): untyped = 7


type QWebSettingsFontSizeEnum* = distinct cint
template MinimumFontSize*(_: type QWebSettingsFontSizeEnum): untyped = 0
template MinimumLogicalFontSize*(_: type QWebSettingsFontSizeEnum): untyped = 1
template DefaultFontSize*(_: type QWebSettingsFontSizeEnum): untyped = 2
template DefaultFixedFontSize*(_: type QWebSettingsFontSizeEnum): untyped = 3


type QWebSettingsThirdPartyCookiePolicyEnum* = distinct cint
template AlwaysAllowThirdPartyCookies*(_: type QWebSettingsThirdPartyCookiePolicyEnum): untyped = 0
template AlwaysBlockThirdPartyCookies*(_: type QWebSettingsThirdPartyCookiePolicyEnum): untyped = 1
template AllowThirdPartyWithExistingCookies*(_: type QWebSettingsThirdPartyCookiePolicyEnum): untyped = 2


import ./gen_qwebsettings_types
export gen_qwebsettings_types

import
  ../QtCore/gen_qurl_types,
  ../QtGui/gen_qicon_types,
  ../QtGui/gen_qpixmap_types
export
  gen_qurl_types,
  gen_qicon_types,
  gen_qpixmap_types

type cQWebSettings*{.exportc: "QWebSettings", incompleteStruct.} = object

proc fcQWebSettings_globalSettings(): pointer {.importc: "QWebSettings_globalSettings".}
proc fcQWebSettings_setFontFamily(self: pointer, which: cint, family: struct_miqt_string): void {.importc: "QWebSettings_setFontFamily".}
proc fcQWebSettings_fontFamily(self: pointer, which: cint): struct_miqt_string {.importc: "QWebSettings_fontFamily".}
proc fcQWebSettings_resetFontFamily(self: pointer, which: cint): void {.importc: "QWebSettings_resetFontFamily".}
proc fcQWebSettings_setFontSize(self: pointer, typeVal: cint, size: cint): void {.importc: "QWebSettings_setFontSize".}
proc fcQWebSettings_fontSize(self: pointer, typeVal: cint): cint {.importc: "QWebSettings_fontSize".}
proc fcQWebSettings_resetFontSize(self: pointer, typeVal: cint): void {.importc: "QWebSettings_resetFontSize".}
proc fcQWebSettings_setAttribute(self: pointer, attr: cint, on: bool): void {.importc: "QWebSettings_setAttribute".}
proc fcQWebSettings_testAttribute(self: pointer, attr: cint): bool {.importc: "QWebSettings_testAttribute".}
proc fcQWebSettings_resetAttribute(self: pointer, attr: cint): void {.importc: "QWebSettings_resetAttribute".}
proc fcQWebSettings_setUserStyleSheetUrl(self: pointer, location: pointer): void {.importc: "QWebSettings_setUserStyleSheetUrl".}
proc fcQWebSettings_userStyleSheetUrl(self: pointer, ): pointer {.importc: "QWebSettings_userStyleSheetUrl".}
proc fcQWebSettings_setDefaultTextEncoding(self: pointer, encoding: struct_miqt_string): void {.importc: "QWebSettings_setDefaultTextEncoding".}
proc fcQWebSettings_defaultTextEncoding(self: pointer, ): struct_miqt_string {.importc: "QWebSettings_defaultTextEncoding".}
proc fcQWebSettings_setIconDatabasePath(location: struct_miqt_string): void {.importc: "QWebSettings_setIconDatabasePath".}
proc fcQWebSettings_iconDatabasePath(): struct_miqt_string {.importc: "QWebSettings_iconDatabasePath".}
proc fcQWebSettings_clearIconDatabase(): void {.importc: "QWebSettings_clearIconDatabase".}
proc fcQWebSettings_iconForUrl(url: pointer): pointer {.importc: "QWebSettings_iconForUrl".}
proc fcQWebSettings_setPluginSearchPaths(paths: struct_miqt_array): void {.importc: "QWebSettings_setPluginSearchPaths".}
proc fcQWebSettings_pluginSearchPaths(): struct_miqt_array {.importc: "QWebSettings_pluginSearchPaths".}
proc fcQWebSettings_setWebGraphic(typeVal: cint, graphic: pointer): void {.importc: "QWebSettings_setWebGraphic".}
proc fcQWebSettings_webGraphic(typeVal: cint): pointer {.importc: "QWebSettings_webGraphic".}
proc fcQWebSettings_setMaximumPagesInCache(pages: cint): void {.importc: "QWebSettings_setMaximumPagesInCache".}
proc fcQWebSettings_maximumPagesInCache(): cint {.importc: "QWebSettings_maximumPagesInCache".}
proc fcQWebSettings_setObjectCacheCapacities(cacheMinDeadCapacity: cint, cacheMaxDead: cint, totalCapacity: cint): void {.importc: "QWebSettings_setObjectCacheCapacities".}
proc fcQWebSettings_setOfflineStoragePath(path: struct_miqt_string): void {.importc: "QWebSettings_setOfflineStoragePath".}
proc fcQWebSettings_offlineStoragePath(): struct_miqt_string {.importc: "QWebSettings_offlineStoragePath".}
proc fcQWebSettings_setOfflineStorageDefaultQuota(maximumSize: clonglong): void {.importc: "QWebSettings_setOfflineStorageDefaultQuota".}
proc fcQWebSettings_offlineStorageDefaultQuota(): clonglong {.importc: "QWebSettings_offlineStorageDefaultQuota".}
proc fcQWebSettings_setOfflineWebApplicationCachePath(path: struct_miqt_string): void {.importc: "QWebSettings_setOfflineWebApplicationCachePath".}
proc fcQWebSettings_offlineWebApplicationCachePath(): struct_miqt_string {.importc: "QWebSettings_offlineWebApplicationCachePath".}
proc fcQWebSettings_setOfflineWebApplicationCacheQuota(maximumSize: clonglong): void {.importc: "QWebSettings_setOfflineWebApplicationCacheQuota".}
proc fcQWebSettings_offlineWebApplicationCacheQuota(): clonglong {.importc: "QWebSettings_offlineWebApplicationCacheQuota".}
proc fcQWebSettings_setLocalStoragePath(self: pointer, path: struct_miqt_string): void {.importc: "QWebSettings_setLocalStoragePath".}
proc fcQWebSettings_localStoragePath(self: pointer, ): struct_miqt_string {.importc: "QWebSettings_localStoragePath".}
proc fcQWebSettings_clearMemoryCaches(): void {.importc: "QWebSettings_clearMemoryCaches".}
proc fcQWebSettings_enablePersistentStorage(): void {.importc: "QWebSettings_enablePersistentStorage".}
proc fcQWebSettings_setThirdPartyCookiePolicy(self: pointer, thirdPartyCookiePolicy: cint): void {.importc: "QWebSettings_setThirdPartyCookiePolicy".}
proc fcQWebSettings_thirdPartyCookiePolicy(self: pointer, ): cint {.importc: "QWebSettings_thirdPartyCookiePolicy".}
proc fcQWebSettings_setCSSMediaType(self: pointer, cSSMediaType: struct_miqt_string): void {.importc: "QWebSettings_setCSSMediaType".}
proc fcQWebSettings_cssMediaType(self: pointer, ): struct_miqt_string {.importc: "QWebSettings_cssMediaType".}
proc fcQWebSettings_enablePersistentStorage1(path: struct_miqt_string): void {.importc: "QWebSettings_enablePersistentStorage1".}


func init*(T: type gen_qwebsettings_types.QWebSettings, h: ptr cQWebSettings): gen_qwebsettings_types.QWebSettings =
  T(h: h)
proc globalSettings*(_: type gen_qwebsettings_types.QWebSettings, ): gen_qwebsettings_types.QWebSettings =
  gen_qwebsettings_types.QWebSettings(h: fcQWebSettings_globalSettings())
